# sv_project_visualizer

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  copts.bzl  example.json  lex.json  output.json  rules.bzl  sv_cst_test.cc  test.sv  test_out.json
.hdl_checker/: cache.json
include/config/: SkUserConfig.h
lib/: common.h  cst.h  graphics.h  project.h  sv.h  sv_colorizer.h  symbol_table.h  vec.h
patches/: BUILD
src/: common.cc  common.h  cst.cc  cst.h  cst_new.cc  graphics.cc  graphics.h  main.cpp  skia_demo.cpp  sv_colorizer.cc  sv_cst_test.cc  symbol_table.cc  vec.h
test/: another.sv  deep.sv  example.sv
